fixed modal wrapping

--- a/themes/music/static/css/modals.css
+++ b/themes/music/static/css/modals.css
@@ -17,12 +17,15 @@ body {
 }
 
 .member-modal .modal-content {
-    width: 70%;
-    margin: 15%;
+    width: 85%;
     background-color: rgba(255,255,255,.9);
-    position: center;
+    margin: 0 auto;
+    margin-top: 15%;
 }
 
+.member-modal .modal-content .modal-body .row{
+    
+}
 
 .portfolio-modal .modal-content {
     position: left;
